# Arcade

./: CMakeLists.txt  Makefile  README.md  clean.bat  clean.sh  fix_headers.py  make.bat
dependencies/: .gitignore  CMakeLists.txt
include/: AEntity.hpp  EventName.hpp  FrameRate.hpp  IEntity.hpp  IScene.hpp  Path.hpp  Save.hpp  Scene.hpp  Style.hpp  System.hpp  SystemManager.hpp  Vector2.hpp  Vector3.hpp  api.h
include/Common/: IScene.hpp
include/Common/component/: AsciiSprite.hpp  Transform.hpp
include/Components/: AsciiSprite.hpp  IComponent.hpp  Sound.hpp  Sprite.hpp  Text.hpp  Transform.hpp
include/Core/: ComponentArray.hpp  ComponentManager.hpp  EntityManager.hpp  Event.hpp  EventManager.hpp  Types.hpp  Vec2.hpp  World.hpp
include/Event/: Event.hpp
include/Exceptions/: EmptyLibraryList.hpp
lib/: CMakeLists.txt
lib/games/: CMakeLists.txt
lib/games/nibbler/: CMakeLists.txt
lib/games/nibbler/include/: LibNibbler.hpp
lib/games/nibbler/src/: LibNibbler.cpp
lib/games/pacman/: CMakeLists.txt
lib/games/pacman/include/: LibPacman.hpp  PacmanMap.hpp
lib/games/pacman/src/: LibPacman.cpp
lib/graphics/: CMakeLists.txt
lib/graphics/SDL2/src/: LibSDL2.cpp
lib/graphics/SFML/: CMakeLists.txt
lib/graphics/SFML/include/: LibSFML.hpp
lib/graphics/SFML/src/: LibSFML.cpp
lib/graphics/nCurses/: CMakeLists.txt
lib/graphics/nCurses/include/: LibNCurses.hpp
lib/graphics/nCurses/src/: LibNCurses.cpp
lib/menu/: CMakeLists.txt
lib/menu/include/: LibMenu.hpp
lib/menu/src/: LibMenu.cpp
resources/: arial.ttf.h  gen_data_header.py
src/: AEntity.cpp  ArcadeLib.cpp  LibraryManager.cpp  Path.cpp  Save.cpp  Scene.cpp  SharedLib.cpp  main.cpp
src_shared/: System.cpp
src_shared/Exceptions/: EmptyLibraryList.cpp
tests/: AllTests.cpp  CMakeLists.txt  LibraryManagerTest.cpp  PathTest.cpp  SharedLibraryTest.cpp
tests/fail_lib/: CMakeLists.txt
tests/fail_lib/game_null_lib_create_return/: CMakeLists.txt  game_null_lib_create_return.cpp
tests/fail_lib/graphic_null_lib_create_return/: CMakeLists.txt  graphic_null_lib_create_return.cpp
tests/fail_lib/missing_create_func/: CMakeLists.txt  missing_create_func.cpp
tests/fail_lib/missing_delete_func/: CMakeLists.txt  missing_delete_func.cpp
tests/fail_lib/missing_get_info_func/: CMakeLists.txt  missing_get_info_func.cpp
tests/succes_lib/: CMakeLists.txt  game_succes_lib.cpp  graphic_succes_lib.cpp
